# Vocale-vibecoding-

./: Dockerfile  Dockerfile.txt  LICENSE  README.md  __init__.py  docker-compose.yml  drivers.py  exceptions.py  main.rego  node_availability.py  nodes.json  orchestrator.py  pyproject.toml  requirements.txt  stub_eliminator.py
.github/workflows/: ci.yml
nexus_compose/: __main__.py  drivers.py  graph.py  nodes.json  registry.py
scripts/: bootstrap.sh  check_health.sh  launch.sh
test/: test_nexus_compose.py  test_nexus_compose_v2.py  test_unified_system.py
unified_system/: README.md  bridge.py
