# ══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — Nexus Compose / Vocal Vibecoding Factory
# ══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68", "wheel"]
# FIX #1: build-backend correct (setuptools.backends.legacy:build n'existe pas)
build-backend = "setuptools.build_meta"

[project]
name = "nexus-compose"
version = "1.0.0"
description = "NEXUS unified software design pipeline — composability orchestration module"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []   # zero hard deps — tout est optionnel

[project.optional-dependencies]
q2d      = ["openai>=1.0"]
batfish  = ["pybatfish>=2024.1"]
neo4j    = ["neo4j>=5.0"]
td       = ["requests>=2.31"]
pytm     = ["pytm>=1.3"]
clab     = ["jinja2>=3.0"]
yaml     = ["pyyaml>=6.0"]
likec4   = []
opa      = []
semgrep  = []
bearer   = []
codeql   = []

all = [
    "openai>=1.0",
    "pybatfish>=2024.1",
    "neo4j>=5.0",
    "requests>=2.31",
    "pytm>=1.3",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

# FIX #4: entry point correct (pointe vers le module racine, pas nexus_compose.*)
[project.scripts]
nexus-compose = "__main__:main"

# FIX #2: les fichiers sont à la RACINE — pas dans un sous-dossier nexus_compose/
[tool.setuptools]
py-modules = [
    "graph",
    "registry",
    "drivers",
    "orchestrator",
    "exceptions",
    "node_availability",
    "stub_eliminator",
    "__init__",
    "__main__",
]

# FIX #3: nodes.json est à la racine, pas dans un package
[tool.setuptools.package-data]
"*" = ["nodes.json"]

[tool.pytest.ini_options]
timeout = 30
log_cli = true
log_cli_level = "INFO"
