# ══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — Nexus Compose / Vocal Vibecoding Factory
# ══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68", "wheel"]
# FIX: "setuptools.backends.legacy:build" n'existe pas → setuptools.build_meta
build-backend = "setuptools.build_meta"

[project]
name = "nexus-compose"
version = "1.0.0"
description = "NEXUS unified software design pipeline — composability orchestration module"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []   # zero hard deps — tout est optionnel

[project.optional-dependencies]
q2d      = ["openai>=1.0"]
batfish  = ["pybatfish>=2024.1"]
neo4j    = ["neo4j>=5.0"]
td       = ["requests>=2.31"]
pytm     = ["pytm>=1.3"]
clab     = ["jinja2>=3.0"]
yaml     = ["pyyaml>=6.0"]
likec4   = []
opa      = []
semgrep  = []
bearer   = []
codeql   = []

all = [
    "openai>=1.0",
    "pybatfish>=2024.1",
    "neo4j>=5.0",
    "requests>=2.31",
    "pytm>=1.3",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

# Entry point — pointe vers nexus_compose/__main__.py
[project.scripts]
nexus-compose = "nexus_compose.__main__:main"

# Package discovery : cherche nexus_compose/ dans la racine du repo
[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_compose*"]

[tool.setuptools.package-data]
nexus_compose = ["nodes.json"]

[tool.pytest.ini_options]
timeout = 30
log_cli = true
log_cli_level = "INFO"
